src/static/css/almanac.css
/* ... */
.alt-bg .btn {
  border-color: #f7f779;
  background-color: #f7f779;
  color: #1a2b49;
}

.alt-bg .btn:hover,
.alt-bg .btn:focus,
.alt-bg .alt.btn {
  background-color: transparent;
  color: #f7f779;
}

.alt-bg .alt.btn:hover,
.alt-bg .alt.btn:focus {
  background-color: #f7f779;
  color: #1a2b49;
}

.top-header,
footer {
  padding-top: 40px;
  padding-bottom: 40px;
}

.top-header,
footer .nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header nav ul,
footer nav ul {
  display: flex;
  align-items: center;
  margin: 0;
  padding-inline-start: 0;
  flex-wrap: nowrap;
}

header nav li,
footer nav li {
  display: flex;
  line-height: 1.4em;
  text-align: center;
}

header nav li li,
footer nav li li {
  text-align: left;
}

header nav .menu li .year-switcher,
header nav .menu li .table-of-contents-switcher,
header nav .menu li .language-switcher {
  margin-bottom: 4em;
}

header nav {
  display: flex;
  align-items: center;
  margin: 0;
}

header nav > ul > li > * {
  margin-right: 1.5em;
}

header nav > ul > li:last-child > * {
  margin-right: 0;
}

nav a {
  text-decoration: none;
  color: #f2f2f2;
}

header .cta {
  display: flex;
  min-width: 205px;
  flex-direction: row-reverse;
}

.table-of-contents-switcher,
.language-switcher,
.year-switcher {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  font-size: 14px;
  font-size: 0.875rem;
}

.search-nav input {
  min-width: 400px;
  text-indent: 5px;
}

.header-search,
.footer-search {
  padding: 5px;
}

.search-input {
  line-height: 1.65;
}

.search-button {
  border-color: #000;
  background-color: #f7f779;
  padding: 6px 27px;
  width: auto;
  border: 1px solid #666;
  border-radius: 2px;
}

.search-button svg {
  fill: #000;
}

.table-of-contents-switcher:hover,
.language-switcher:hover,
.year-switcher:hover {
  color: #f7f779;
}

.table-of-contents-switcher::after,
.language-switcher::after,
.year-switcher::after {
  content: "";
  position: absolute;
  pointer-events: none;
  border-style: solid;
  border-width: 2px 2px 0 0;
  border-color: currentColor;
  height: 0.4em;
  width: 0.4em;
  top: 50%;
  margin-top: -0.4em;
  /*
    22px is a magic number
    equal to the select right computed padding + 2px total sides border
  */
  right: 22px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.table-of-contents-switcher select,
.language-switcher select,
.year-switcher select {
  border: 1px solid currentColor;
  border-radius: 50px;
  padding: 20px 38px 20px 20px;
  background: none;
  color: inherit;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-width: 100px;
  min-width: 6.35rem;
  text-align-last: center;
}

.table-of-contents-switcher select,
.language-switcher select {
  min-width: 120px;
  min-width: 7.5rem;
}

.table-of-contents-switcher select::-ms-expand,
.language-switcher select::-ms-expand,
.year-switcher select::-ms-expand {
  display: none;
}

.table-of-contents-switcher option,
.language-switcher option,
.year-switcher option {
  color: #1a2b49;
  background-color: white;
}

.table-of-contents-switcher:focus-within,
.language-switcher:focus-within,
.year-switcher:focus-within,
.table-of-contents-switcher select:focus,
.language-switcher select:focus,
.year-switcher select:focus {
  border-color: #f7f779;
  color: #f7f779;
}

.not-translated {
  font-style: italic;
  font-size: 0.9em;
}

.menu-btn,
#menu,
#mobile-footer-nav-items,
.menu {
  display: none;
}

.main {
  margin: 0 auto;
  font-size: 17px;
  font-size: 1.0625rem;
}

.main a,
.main a:visited {
  color: #0b1423;
}

h2,
h3,
h4 {
  margin-top: 2em;
}

h2 code,
h3 code,
h4 code {
  font-size: inherit;
}

p,
td,
th,
code,
li {
  font-size: 17px;
  font-size: 1.0625rem;
  line-height: 1.6em;
}

hr {
  opacity: 0.2;
}

blockquote {
  position: relative;
  font-style: italic;
  font-size: 19px;
  font-size: 1.1875rem;
  line-height: 1.5em;
}

blockquote::before {
  content: '"';
  content: '"' / "";
  position: absolute;
  top: -4rem;
  left: -7rem;
  opacity: 0.05;
  font-size: 20rem;
  font-family: 'Courier New', Courier, monospace;
  line-height: 1;
}

blockquote em {
  font-style: normal;
}

/* Footer */
footer .container {
  display: grid;
  grid-template-areas:
    'home-logo nav-items nav-items nav-items'
    'hr hr hr hr'
    'copyright copyright ha-logo social-media';
  grid-template-columns: 280px 1fr 1fr 120px 0 0;
  grid-template-columns: 17.5rem 1fr 1fr 7.5rem 0 0;
}

footer .home-logo {
  grid-area: home-logo;
  display: flex;
  justify-content: start;
  align-items: center;
}

footer .nav-items {
  grid-area: nav-items;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

footer .mobile-ha-social-media {
  display: none;
}

footer .ha-logo {
  grid-area: ha-logo;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  color: currentColor;
}

footer .nav-items > ul > li > * {
  margin-right: 2vw;
}

footer .nav-items > ul > li:last-child > * {
  margin-right: 0;
}

footer .language-switcher {
  grid-area: language-switcher;
}

footer .copyright {
  grid-area: copyright;
  display: block;
  align-items: center;
}

footer .social-media {
  grid-area: social-media;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

footer ul {
  margin-block-start: 0;
  margin-block-end: 0;
}

footer hr {
  grid-area: hr;
  width: 100%;
  margin: 40px 0 20px 0;
}

footer hr:last-of-type {
  grid-area: hr-last;
  display: none;
}

p.copyright {
  margin: 0;
  font-size: 16px;
  font-size: 1rem;
  color: #f2f2f2;
}

p.copyright a {
  color: white;
}

.social-media div {
  padding: 0 20px;
}

.social-media li:first-child a {
  margin-right: 30px;
}

.social-media li {
  display: flex;
}

.social-media a {
  color: currentColor;
}
/* ... */

